--- a/azure_anonymization.ipynb
+++ b/azure_anonymization.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKUy2E5bW9QzPj2xBVNT0K",
+      "authorship_tag": "ABX9TyOlziTprFaS4zZGd0UfT9Bv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +29,15 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install openai"
+        "!pip install openai\n",
+        "!pip install tiktoken"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CeYVTxvEB13V",
-        "outputId": "dd69821a-5c64-4af1-e2d1-603c712b997b"
+        "outputId": "fba8cf49-9c9f-446a-e8ba-918be80c081e"
       },
       "execution_count": null,
       "outputs": [
@@ -45,14 +46,14 @@
           "name": "stdout",
           "text": [
             "Collecting openai\n",
-            "  Downloading openai-1.34.0-py3-none-any.whl (325 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m325.5/325.5 kB\u001b[0m \u001b[31m3.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "  Downloading openai-1.35.3-py3-none-any.whl (327 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m327.4/327.4 kB\u001b[0m \u001b[31m5.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: anyio<5,>=3.5.0 in /usr/local/lib/python3.10/dist-packages (from openai) (3.7.1)\n",
             "Requirement already satisfied: distro<2,>=1.7.0 in /usr/lib/python3/dist-packages (from openai) (1.7.0)\n",
             "Collecting httpx<1,>=0.23.0 (from openai)\n",
             "  Downloading httpx-0.27.0-py3-none-any.whl (75 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.6/75.6 kB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: pydantic<3,>=1.9.0 in /usr/local/lib/python3.10/dist-packages (from openai) (2.7.3)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.6/75.6 kB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: pydantic<3,>=1.9.0 in /usr/local/lib/python3.10/dist-packages (from openai) (2.7.4)\n",
             "Requirement already satisfied: sniffio in /usr/local/lib/python3.10/dist-packages (from openai) (1.3.1)\n",
             "Requirement already satisfied: tqdm>4 in /usr/local/lib/python3.10/dist-packages (from openai) (4.66.4)\n",
             "Requirement already satisfied: typing-extensions<5,>=4.7 in /usr/local/lib/python3.10/dist-packages (from openai) (4.12.2)\n",
@@ -61,14 +62,25 @@
             "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->openai) (2024.6.2)\n",
             "Collecting httpcore==1.* (from httpx<1,>=0.23.0->openai)\n",
             "  Downloading httpcore-1.0.5-py3-none-any.whl (77 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m77.9/77.9 kB\u001b[0m \u001b[31m4.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m77.9/77.9 kB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting h11<0.15,>=0.13 (from httpcore==1.*->httpx<1,>=0.23.0->openai)\n",
             "  Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m3.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m7.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: annotated-types>=0.4.0 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)\n",
             "Requirement already satisfied: pydantic-core==2.18.4 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (2.18.4)\n",
             "Installing collected packages: h11, httpcore, httpx, openai\n",
-            "Successfully installed h11-0.14.0 httpcore-1.0.5 httpx-0.27.0 openai-1.34.0\n"
+            "Successfully installed h11-0.14.0 httpcore-1.0.5 httpx-0.27.0 openai-1.35.3\n",
+            "Collecting tiktoken\n",
+            "  Downloading tiktoken-0.7.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.1 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.1/1.1 MB\u001b[0m \u001b[31m10.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: regex>=2022.1.18 in /usr/local/lib/python3.10/dist-packages (from tiktoken) (2024.5.15)\n",
+            "Requirement already satisfied: requests>=2.26.0 in /usr/local/lib/python3.10/dist-packages (from tiktoken) (2.31.0)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests>=2.26.0->tiktoken) (3.3.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests>=2.26.0->tiktoken) (3.7)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests>=2.26.0->tiktoken) (2.0.7)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests>=2.26.0->tiktoken) (2024.6.2)\n",
+            "Installing collected packages: tiktoken\n",
+            "Successfully installed tiktoken-0.7.0\n"
           ]
         }
       ]
@@ -84,7 +96,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cd41c758-7b73-43b1-f16d-77ab960de42c"
+        "outputId": "e478fa7b-1a1e-4a64-e485-0cf8d427bd07"
       },
       "execution_count": null,
       "outputs": [
@@ -100,9 +112,43 @@
     {
       "cell_type": "code",
       "source": [
+        "%%capture\n",
+        "from google.colab import userdata\n",
+        "API_VERSION = userdata.get('API_VERSION')\n",
+        "API_KEY = userdata.get('API_KEY')\n",
+        "AZURE_ENDPOINT = userdata.get('AZURE_ENDPOINT')\n",
+        "DEPLOYMENT_NAME = userdata.get('DEPLOYMENT_NAME')"
+      ],
+      "metadata": {
+        "id": "yqXuXyPdct04"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Function to count tokens using tiktoken\n",
+        "def count_tokens(prompt: str, model: str = \"gpt-3.5-turbo\") -> int:\n",
+        "    encoding = tiktoken.encoding_for_model(model)\n",
+        "    tokens = encoding.encode(prompt)\n",
+        "    return len(tokens)"
+      ],
+      "metadata": {
+        "id": "F9Gncv25cv56"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import email\n",
         "from email import policy\n",
         "from email.parser import BytesParser\n",
+        "import time\n",
+        "\n",
+        "beg = time.time()\n",
         "\n",
         "# Path to your .eml file\n",
         "eml_file_path = '/content/drive/MyDrive/emails/emailreturn1.eml'\n",
@@ -135,65 +181,11 @@
         "            break\n",
         "else:\n",
         "    # If the message isn't multipart, the payload is simple text\n",
-        "    body = msg.get_payload(decode=True).decode(msg.get_content_charset())"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "o1cboWr-IpJ8",
-        "outputId": "bbc86e7b-fe3a-45e6-ff19-20d050f057af"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Subject: Subject: Flip It and Reverse It (Refund On The Way)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%%capture\n",
-        "from google.colab import userdata\n",
-        "API_VERSION = userdata.get('API_VERSION')\n",
-        "API_KEY = userdata.get('API_KEY')\n",
-        "AZURE_ENDPOINT = userdata.get('AZURE_ENDPOINT')\n",
-        "DEPLOYMENT_NAME = userdata.get('DEPLOYMENT_NAME')"
-      ],
-      "metadata": {
-        "collapsed": true,
-        "id": "-zk5pZkwB-Wk"
-      },
-      "execution_count": 58,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 59,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "11F9gcgrBueC",
-        "outputId": "346e6def-f1ec-41c0-e6f0-0c3acd56a708"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "ChatCompletionMessage(content=\"Hi John,\\nWe've refunded your order for $110.00 USD. Heads up: while the refund is immediate on our end, it can take a few days for your bank to process.\\nOrder 886638867 \\n1 Women's Wool Runners - Dapple Grey (Cream Sole) - 9\\t$110.00\\nSubtotal\\t$110.00\\nFast Shipping (Delivered in 3-5 Business Days)\\t$6.00\\nTotal\\t$116.00\\n(Paid with Visa...5678)\\t$116.00\\nRefund to Visa...5678\\t- $110.00\\n\\t\\t\\nHELP\\tCONTACT US\\t1.800.111.3333\\n\\t\\t\\t\\n© 2021 Allbirds, Inc.\\n236 Market St. San Francisco, CA 94111\", role='assistant', function_call=None, tool_calls=None)\n"
-          ]
-        }
-      ],
-      "source": [
+        "    body = msg.get_payload(decode=True).decode(msg.get_content_charset())\n",
+        "\n",
         "import os\n",
         "from openai import AzureOpenAI\n",
+        "import tiktoken\n",
         "\n",
         "client = AzureOpenAI(\n",
         "    api_key=API_KEY,\n",
@@ -204,59 +196,89 @@
         "deployment_name= DEPLOYMENT_NAME\n",
         "\n",
         "# Send a completion call to generate an answer\n",
-        "prompt = 'Output this email body after replacing ALL PII with placeholder info: '+body\n",
+        "prompt = body\n",
         "content = '''\n",
-        "You are an anonymizer of emails. Given an email's body, your job is to output the same email but after replacing ALL Personal Identifiable Information (PII) with placeholder/fake info. PII is any info that permits the identity of an individual to whom the information applies to be reasonably inferred by either direct or indirect means.\n",
+        "Your job is to output a given email but after swapping ONLY PII with fake info. PII is anything that can give away someone's identity.\n",
         "\n",
-        "You should REPLACE ALL instances of the following for the CUSTOMER ONLY:\n",
-        "-One's name\n",
-        "-One's billing/shipping address\n",
-        "-One's phone number\n",
-        "-One's email address\n",
-        "-One's order number\n",
-        "-One's username\n",
-        "-Any portion of one's credit card number\n",
-        "-One's ip address.\n",
+        "For example, you should REPLACE ALL instances of the following for the CUSTOMER ONLY:\n",
+        "-Name\n",
+        "-Billing/shipping address\n",
+        "-Phone number\n",
+        "-Email address\n",
+        "-Order number\n",
+        "-Any portion of credit card number\n",
         "\n",
-        "Somethings that should NOT be replaced are:\n",
-        "-The name of the item bought or refunded\n",
-        "-The number of items bought or refunded\n",
-        "-The email, phone number, address, or name of the COMPANY\n",
-        "-The cost of the items\n",
-        "\n",
-        "Replace the info with fake names/addresses/phone numbers/emails/order numbers/credit card numbers/etc. Make sure to not remove any info that does not correspond to the person being emailed.\n",
-        "In addition, all links should be deleted entirely.\n",
-        "Here is an example of the converting process you should use for an email:\n",
+        "Replace the above with fake names/addresses/phone numbers/emails/order numbers/credit card numbers/etc. Delete all links. Do not change dollar amounts.\n",
+        "Example:\n",
         "\n",
         "Input:\n",
         "Hi James,\n",
         "\n",
-        "We'd like to confirm your order of 5 pairs of shorts (Order number: 6823) to the address 8523 Main St. San Francisco, CA 92356.\n",
-        "We have sent this email to both your email: jamessmith@gmail.com and your phone number 882-235-2362.\n",
+        "We'd like to confirm your order (Order number: 6823) to the 8523 Main St. San Francisco, CA 92356.\n",
         "Paid with Mastercard ending in 9823.\n",
-        "\n",
-        "CONTACT US:\n",
-        "1-235-225-9323\n",
-        "235 2nd St. San Francisco, CA 92356\n",
         "\n",
         "Example of your output:\n",
         "Hi Stephen,\n",
         "\n",
-        "We'd like to confirm your order of 5 pairs of shorts (Order number: 9866) to the address 1323 Oak St. Orlando, FL 12235.\n",
-        "We have sent this email to both your email: stephencur2@gmail.com and your phone number 122-003-2123.\n",
+        "We'd like to confirm your order (Order number: 9866) to the 1323 Oak St. Orlando, FL 12235.\n",
         "Paid with Mastercard ending in 0912.\n",
-        "\n",
-        "CONTACT US:\n",
-        "1-235-225-9323\n",
-        "235 2nd St. San Francisco, CA 92356\n",
         "'''\n",
+        "start = time.time()\n",
         "response = client.chat.completions.create(\n",
         "    model=deployment_name,\n",
         "    messages=[{\"role\": \"system\", \"content\": content},\n",
         "              {\"role\": \"user\", \"content\": prompt}\n",
         "              ]\n",
         ")\n",
+        "end = time.time()\n",
+        "print(\"API call: \", end-start)\n",
+        "print(\"Total: \", end-beg)\n",
+        "print(\"Tokens: \", count_tokens(content+prompt))\n",
         "print(response.choices[0].message)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o1cboWr-IpJ8",
+        "outputId": "b3c910fb-629e-413e-ab27-6b3e319f1eb6"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Subject: Subject: Flip It and Reverse It (Refund On The Way)\n",
+            "API call:  2.8960280418395996\n",
+            "Total:  3.389348268508911\n",
+            "Tokens:  527\n",
+            "ChatCompletionMessage(content=\"Hi Raj,\\nWe've refunded your order for $110.00 USD. Heads up: while the refund is immediate on our end, it can take a few days for your bank to process.\\nOrder 523242542\\n1 Women's Wool Runners - Navy Blue (Cream Sole) - 9\\t$110.00\\nSubtotal\\t$110.00\\nFast Shipping (Delivered in 3-5 Business Days)\\t$6.00\\nTotal\\t$116.00\\n(Paid with Visa...7363)\\t$116.00\\nRefund to Visa...7363\\t- $110.00\\n\\t\\t\\nHELP\\tCONTACT US\\t1.888.963.8944\\n\\t\\t\\t\\n© 2023 Allbirds, Inc.\\n730 Montgomery St. San Francisco, CA 94111\", role='assistant', function_call=None, tool_calls=None)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(count_tokens(prompt))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OoxrjDZXZ1Rg",
+        "outputId": "fadb5285-f84a-4929-abf0-c70164f18e83"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "323\n"
+          ]
+        }
       ]
     },
     {
@@ -269,28 +291,28 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5aa94b5a-8180-4d64-b62f-9b3223f7d065"
+        "outputId": "1bf801bb-3401-43c7-9d60-a4ace0ebcc57"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hi John,\n",
+            "Hi Raj,\n",
             "We've refunded your order for $110.00 USD. Heads up: while the refund is immediate on our end, it can take a few days for your bank to process.\n",
-            "Order 886638867 \n",
-            "1 Women's Wool Runners - Dapple Grey (Cream Sole) - 9\t$110.00\n",
+            "Order 523242542\n",
+            "1 Women's Wool Runners - Navy Blue (Cream Sole) - 9\t$110.00\n",
             "Subtotal\t$110.00\n",
             "Fast Shipping (Delivered in 3-5 Business Days)\t$6.00\n",
             "Total\t$116.00\n",
-            "(Paid with Visa...5678)\t$116.00\n",
-            "Refund to Visa...5678\t- $110.00\n",
+            "(Paid with Visa...7363)\t$116.00\n",
+            "Refund to Visa...7363\t- $110.00\n",
             "\t\t\n",
-            "HELP\tCONTACT US\t1.800.111.3333\n",
+            "HELP\tCONTACT US\t1.888.963.8944\n",
             "\t\t\t\n",
-            "© 2021 Allbirds, Inc.\n",
-            "236 Market St. San Francisco, CA 94111\n"
+            "© 2023 Allbirds, Inc.\n",
+            "730 Montgomery St. San Francisco, CA 94111\n"
           ]
         }
       ]
@@ -305,9 +327,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mGkFMz4sIaDd",
-        "outputId": "78abe415-99b7-4a50-ac00-fdc604dd2b93"
+        "outputId": "fdc7f2fe-45a1-4eb8-c8ff-80f88af9e9e2"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,15 +354,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "RVrncCq1Jrsx"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
